# nix-recorder

./: .gitignore  .nix_shell_tool_command_log  Cargo.toml  README.md  flake.nix  shell.nix
scripts/: monitor_commands.sh
src/: main.rs  monitor_commands.rs
