[package]
name = "nixRecorder"
version = "0.1.0"
edition = "2021"

include = ["src/**/*", "scripts/*", "Cargo.toml", "README.md"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = { version = "0.3", default-features = false }
